--- a/Source/Pages/Gallery/YPLibraryView.xib
+++ b/Source/Pages/Gallery/YPLibraryView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,7 +17,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="400" height="550"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6id-Ro-HHC">
-                            <rect key="frame" x="0.0" y="430" width="400" height="120"/>
+                            <rect key="frame" x="0.0" y="456" width="400" height="94"/>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="jnu-mn-3OB">
                                 <size key="itemSize" width="60" height="60"/>
@@ -55,31 +54,35 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cuZ-B3-1ot">
-                    <rect key="frame" x="0.0" y="400" width="400" height="30"/>
+                    <rect key="frame" x="0.0" y="400" width="400" height="56"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgL-FS-ojK">
-                            <rect key="frame" x="10" y="0.0" width="186" height="30"/>
+                            <rect key="frame" x="12" y="13" width="186" height="30"/>
                             <state key="normal" title="Выбрать фото из альбома"/>
                             <connections>
                                 <action selector="didTapSelectAlbumAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="meJ-It-bM9"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wc4-Bl-6WY">
-                            <rect key="frame" x="360" y="0.0" width="30" height="30"/>
+                            <rect key="frame" x="356" y="12" width="32" height="32"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="32" id="rDc-UH-p7j"/>
+                                <constraint firstAttribute="width" secondItem="wc4-Bl-6WY" secondAttribute="height" multiplier="1:1" id="zWX-Bf-20I"/>
+                            </constraints>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemRedColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="wc4-Bl-6WY" firstAttribute="centerY" secondItem="cuZ-B3-1ot" secondAttribute="centerY" id="7H4-b4-rd4"/>
-                        <constraint firstItem="hgL-FS-ojK" firstAttribute="leading" secondItem="cuZ-B3-1ot" secondAttribute="leading" constant="10" id="8zo-AQ-IWT"/>
+                        <constraint firstItem="hgL-FS-ojK" firstAttribute="leading" secondItem="cuZ-B3-1ot" secondAttribute="leading" constant="12" id="8zo-AQ-IWT"/>
                         <constraint firstItem="hgL-FS-ojK" firstAttribute="centerY" secondItem="cuZ-B3-1ot" secondAttribute="centerY" id="Idx-wR-sMX"/>
-                        <constraint firstAttribute="height" constant="30" id="PQ6-iM-FJj"/>
+                        <constraint firstAttribute="height" constant="56" id="PQ6-iM-FJj"/>
                         <constraint firstItem="hgL-FS-ojK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cuZ-B3-1ot" secondAttribute="top" id="PpK-tA-q87"/>
-                        <constraint firstAttribute="trailing" secondItem="wc4-Bl-6WY" secondAttribute="trailing" constant="10" id="dYH-nU-HZ1"/>
-                        <constraint firstAttribute="bottom" secondItem="wc4-Bl-6WY" secondAttribute="bottom" id="gli-Vi-oua"/>
+                        <constraint firstAttribute="trailing" secondItem="wc4-Bl-6WY" secondAttribute="trailing" constant="12" id="dYH-nU-HZ1"/>
+                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wc4-Bl-6WY" secondAttribute="bottom" id="gli-Vi-oua"/>
                         <constraint firstItem="wc4-Bl-6WY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hgL-FS-ojK" secondAttribute="trailing" constant="16" id="hdi-tJ-YMB"/>
                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hgL-FS-ojK" secondAttribute="bottom" id="pdq-8r-HPO"/>
-                        <constraint firstItem="wc4-Bl-6WY" firstAttribute="top" secondItem="cuZ-B3-1ot" secondAttribute="top" id="zVH-Cn-xmu"/>
+                        <constraint firstItem="wc4-Bl-6WY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cuZ-B3-1ot" secondAttribute="top" id="zVH-Cn-xmu"/>
                     </constraints>
                 </view>
             </subviews>
@@ -110,9 +113,4 @@
             <point key="canvasLocation" x="140.80000000000001" y="154.72263868065968"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
