--- a/Source/Pages/Gallery/YPLibraryView.xib
+++ b/Source/Pages/Gallery/YPLibraryView.xib
@@ -56,13 +56,46 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cuZ-B3-1ot">
                     <rect key="frame" x="0.0" y="400" width="400" height="56"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgL-FS-ojK">
-                            <rect key="frame" x="12" y="13" width="186" height="30"/>
-                            <state key="normal" title="Выбрать фото из альбома"/>
-                            <connections>
-                                <action selector="didTapSelectAlbumAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="meJ-It-bM9"/>
-                            </connections>
-                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgg-yl-CbD">
+                            <rect key="frame" x="12" y="0.0" width="30" height="56"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUv-SB-x21">
+                                    <rect key="frame" x="0.0" y="28" width="12" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BSr-Vo-Svt">
+                                    <rect key="frame" x="18" y="16" width="12" height="24"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="12" id="Zlm-5c-oeY"/>
+                                        <constraint firstAttribute="height" constant="24" id="tiO-4Q-9eJ"/>
+                                    </constraints>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgL-FS-ojK">
+                                    <rect key="frame" x="0.0" y="0.0" width="30" height="56"/>
+                                    <connections>
+                                        <action selector="didTapSelectAlbumAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="meJ-It-bM9"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="hgL-FS-ojK" firstAttribute="top" secondItem="kgg-yl-CbD" secondAttribute="top" id="1O7-UC-xQK"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="PUv-SB-x21" secondAttribute="bottom" id="9Y5-7Z-CL7"/>
+                                <constraint firstItem="BSr-Vo-Svt" firstAttribute="leading" secondItem="PUv-SB-x21" secondAttribute="trailing" constant="6" id="DJN-SC-GR7"/>
+                                <constraint firstAttribute="trailing" secondItem="hgL-FS-ojK" secondAttribute="trailing" id="KJP-Ky-4Hf"/>
+                                <constraint firstAttribute="bottom" secondItem="hgL-FS-ojK" secondAttribute="bottom" id="NT7-ai-IVj"/>
+                                <constraint firstItem="hgL-FS-ojK" firstAttribute="leading" secondItem="kgg-yl-CbD" secondAttribute="leading" id="clb-0V-DNw"/>
+                                <constraint firstItem="PUv-SB-x21" firstAttribute="centerY" secondItem="kgg-yl-CbD" secondAttribute="centerY" id="d1x-An-hHs"/>
+                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="BSr-Vo-Svt" secondAttribute="bottom" id="eEh-Th-NMK"/>
+                                <constraint firstItem="BSr-Vo-Svt" firstAttribute="centerY" secondItem="kgg-yl-CbD" secondAttribute="centerY" id="hXE-tI-W3e"/>
+                                <constraint firstAttribute="trailing" secondItem="BSr-Vo-Svt" secondAttribute="trailing" id="inR-iJ-Rrn"/>
+                                <constraint firstItem="BSr-Vo-Svt" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kgg-yl-CbD" secondAttribute="top" id="l7B-8h-Flj"/>
+                                <constraint firstItem="PUv-SB-x21" firstAttribute="leading" secondItem="kgg-yl-CbD" secondAttribute="leading" id="qfn-ew-IOE"/>
+                                <constraint firstItem="PUv-SB-x21" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kgg-yl-CbD" secondAttribute="top" id="vjo-6c-FO5"/>
+                            </constraints>
+                        </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wc4-Bl-6WY">
                             <rect key="frame" x="356" y="12" width="32" height="32"/>
                             <constraints>
@@ -74,14 +107,14 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="wc4-Bl-6WY" firstAttribute="centerY" secondItem="cuZ-B3-1ot" secondAttribute="centerY" id="7H4-b4-rd4"/>
-                        <constraint firstItem="hgL-FS-ojK" firstAttribute="leading" secondItem="cuZ-B3-1ot" secondAttribute="leading" constant="12" id="8zo-AQ-IWT"/>
-                        <constraint firstItem="hgL-FS-ojK" firstAttribute="centerY" secondItem="cuZ-B3-1ot" secondAttribute="centerY" id="Idx-wR-sMX"/>
+                        <constraint firstItem="wc4-Bl-6WY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kgg-yl-CbD" secondAttribute="trailing" constant="16" id="C44-3f-VMt"/>
                         <constraint firstAttribute="height" constant="56" id="PQ6-iM-FJj"/>
-                        <constraint firstItem="hgL-FS-ojK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cuZ-B3-1ot" secondAttribute="top" id="PpK-tA-q87"/>
+                        <constraint firstItem="kgg-yl-CbD" firstAttribute="top" secondItem="cuZ-B3-1ot" secondAttribute="top" id="WFp-hU-VJR"/>
+                        <constraint firstItem="kgg-yl-CbD" firstAttribute="centerY" secondItem="cuZ-B3-1ot" secondAttribute="centerY" id="WXl-bE-yW0"/>
+                        <constraint firstAttribute="bottom" secondItem="kgg-yl-CbD" secondAttribute="bottom" id="d9C-kS-eRo"/>
                         <constraint firstAttribute="trailing" secondItem="wc4-Bl-6WY" secondAttribute="trailing" constant="12" id="dYH-nU-HZ1"/>
+                        <constraint firstItem="kgg-yl-CbD" firstAttribute="leading" secondItem="cuZ-B3-1ot" secondAttribute="leading" constant="12" id="fPl-Qx-TCC"/>
                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wc4-Bl-6WY" secondAttribute="bottom" id="gli-Vi-oua"/>
-                        <constraint firstItem="wc4-Bl-6WY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hgL-FS-ojK" secondAttribute="trailing" constant="16" id="hdi-tJ-YMB"/>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="hgL-FS-ojK" secondAttribute="bottom" id="pdq-8r-HPO"/>
                         <constraint firstItem="wc4-Bl-6WY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cuZ-B3-1ot" secondAttribute="top" id="zVH-Cn-xmu"/>
                     </constraints>
                 </view>
@@ -103,12 +136,15 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="albumTitle" destination="PUv-SB-x21" id="7Pv-ca-hyj"/>
                 <outlet property="assetViewContainer" destination="90B-0c-ych" id="75y-1t-G37"/>
                 <outlet property="assetViewContainerConstraintTop" destination="u5j-7G-j99" id="FfD-fg-8ch"/>
                 <outlet property="assetZoomableView" destination="Mc5-1c-z7q" id="sGM-mc-f2B"/>
                 <outlet property="collectionView" destination="6id-Ro-HHC" id="NDT-3i-ayr"/>
                 <outlet property="multipleSelectionButton" destination="wc4-Bl-6WY" id="CsJ-b8-TXU"/>
                 <outlet property="selectAlbumButton" destination="hgL-FS-ojK" id="xan-4C-GLm"/>
+                <outlet property="selectAlbumIconView" destination="BSr-Vo-Svt" id="x7R-bd-dGI"/>
+                <outlet property="selectAlbumTitleLabel" destination="PUv-SB-x21" id="agV-cd-KhQ"/>
             </connections>
             <point key="canvasLocation" x="140.80000000000001" y="154.72263868065968"/>
         </view>
